--- a/css/prism.css
+++ b/css/prism.css
@@ -138,3 +138,18 @@
 .token.table {
   display: inline;
 }
+
+.custom-img {
+  object-fit: contain;
+  width: 100% !important;
+  position: relative !important;
+  height: unset !important;
+}
+
+.unset-img {
+  width: 100%;
+}
+
+.unset-img > div {
+  position: unset !important;
+}
